--- a/package.json
+++ b/package.json
@@ -9,26 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@types/three": "^0.158.3",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.16",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
     "react-use-gesture": "^9.1.3",
-    "three": "^0.158.0",
-    "@types/three": "^0.158.3",
-    "next-themes": "^0.2.1"
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5.3.3"
   }
 }
